# MillenniumDB

./: .dockerignore  .gitignore  CMakeLists.txt  DEMO.txt  Dockerfile  Makefile.new  Makefile.old  README.md  TODO.md  bug1  bug2.txt  bug3  bug4  debugging.txt  estructura.md  heuristica.txt  idea_reificacion_neo4j  makefile  mediciones  n1_out  order_by  out  refactor.md  results.txt  small-db copy.txt  test_grammar.sh  todo-model.md  triangle.nt
_results/: sf_10_neo4j_killer  successive_imports.txt
_results/demo/: results_overview.md
_results/ldbc_sbn/: benchmark.sh  convert.py  time_import_3df3x  time_import_graphdb  time_import_neo4j
doc/: (old)query_execution.md  (old)wikidata_model.md  README.md  aggregates.md  data_model.md  distinct.md  limits.md  optional.md  property_path.md  quad_model.md  query_execution.md  query_language.md  query_plan.md  wikidata_reification.md
doc/benchmarking/: benchmarking.md  blazegraph.properties  milleniumdb_db.txt  milleniumdb_query.txt  sparql_db.ttl  sparql_query.txt  virtuoso.ini
doc/datatypes/: datetime.md  decimal.md
doc/internals/: buffer_manager.md  file_manager.md  storage.md
doc/query_execution/: README.md
docs/: data_model.md  indexes.md  overview.md  python_interface_proposal.txt  query_plan.md  wikidata_model.md
ejemplos query plan/: 01_multiple_labels  02_one_connection  BNLJ
grammar/: ast.h  ast_adapted.h  example_queries.txt  exceptions.h  grammar.h  grammar.txt  main.cc  query.txt  test.sh  visitors.cc  visitors.h
ldbc_sbn/: time_import_jena
ldbc_sbn/short_reads/: q4.md  q5.md  (+2 more)
main/: create_db.cc  execute_query.cc  grammar.cc
scripts/: generate_db.py  generate_graph.py  generate_graph_both.py  generate_graph_optional.py  generate_graph_path.py  generate_neo4j_graph.py  generate_tests_output.py  join_generator.py  neo4j_import.sh  neo4j_wikidata_parser.py  order_db_tests.py  path_query_executer.py  rdf2pg_transformer.py  snb_convert_from_neo4j_csvs.py  sparql_wrapper.py  triangle_query.py  wikidata_parser.py
tests/: manual_query  query_debug  query_debug_small_1  query_debug_small_2  query_debug_small_3  query_debug_test_1  query_debug_test_2  query_debug_test_3  small-db.txt  test.py  test_grammar.sh  test_queries.sh
wco_cds_paper/: benchmark_local.sh  benchmark_mdb.py  benchmark_results.tsv  benchmark_results_filtered.tsv  benchmark_results_filtered_ramdisk.tsv  benchmark_results_full.tsv  benchmark_results_full_ramdisk.tsv  benchmark_results_full_ramdisk_1295_queries.csv  benchmark_results_full_ramdisk_BKP.txt  benchmark_results_full_ramdisk_no_limit_BKP.txt  benchmark_results_full_ramdisk_no_limit_desde_query_370.tsv  benchmark_results_full_ramdisk_no_limit_primeras_369_queries.txt  benchmark_server_filtered.sh  benchmark_server_filtered_ramdisk.sh  benchmark_server_full.sh  benchmark_server_full_ramdisk.sh  benchmark_server_full_ramdisk_no_limit.sh  benchmark_shannon_filtered.sh  benchmark_shannon_filtered_ramdisk.sh  benchmark_shannon_full.sh  benchmark_shannon_full_ramdisk.sh  build.sh  create_input_file.sh  create_test_input_file.sh  db_creation_wikipedia_filtered_log.txt  db_creation_wikipedia_full_log.txt  output_queries.txt  output_queries_wikidata_full_ORIGINAL.txt  output_queries_wikidata_full_no_limit.txt  output_queries_wikidata_full_no_limit_desde_query_370.txt  output_queries_wikidata_full_no_limit_primeras_369_queries.txt  prepare_ramdisk.sh  readme.md  recreate_db.sh  recreate_db_full.sh  ring_to_millDB_format_DB_converter  ring_to_millDB_format_DB_converter.cpp  transform_ring_to_mdb_queries  transform_ring_to_mdb_queries.cpp  wikidata_queries.txt
(+1578 files in other folders)
